More minor adjustments.

--- a/presentation/index.mdx
+++ b/presentation/index.mdx
@@ -134,6 +134,34 @@ export default BlueAlertSlide;
 
 ---
 
+<img
+  src={require("../assets/me.jpg")}
+  style={{
+    height: "50vh"
+  }}
+/>
+
+# @ralex1993
+
+---
+
+<ShipLogo />
+
+# Thorium
+
+---
+
+- What
+- How
+- Why
+- Lessons Learned
+
+---
+
+# Space Centers
+
+---
+
 <PlanetaryScan />
 
 ---
@@ -182,6 +210,10 @@ export default BlueAlertSlide;
     bottom: 0
   }}
 />
+
+---
+
+# Ship Controls
 
 ---
 
