--- a/presentation/index.mdx
+++ b/presentation/index.mdx
@@ -287,3 +287,75 @@ Who has been to the Space Center?
 </Notes>
 
 ---
+
+# Step 1: Vision
+
+---
+
+> When I started Microsoft , we had big dreams. We talked about a computer on
+> every desk and in every home.
+
+<Cite>Bill Gates</Cite>
+
+---
+
+> I want controls that can do anything for anyone. Spaceships. Submarines.
+> Escape Rooms. Your only limit is your imagination.
+
+<Cite>Me</Cite>
+
+---
+
+# Step 2: Goals
+
+---
+
+<span style={{ fontSize: "80px" }}>MoSCoW</span>
+
+- Must have
+- Should have
+- Could be nice to have
+- Won't have
+
+---
+
+# Must Have
+
+- Cross-platform
+- Fast Latency
+- Configurable
+
+---
+
+# Won't Have
+
+- Native Controls
+- Playable over the Internet
+
+---
+
+# Step 3: Plan
+
+---
+
+- Developer experience
+- Working in a familiar domain
+- Tools
+  - React
+  - GraphQL & Apollo
+- Doing a little bit every day. One commit a day
+
+---
+
+# Step 4: Accountability
+
+---
+
+- Open Source
+- Soliciting Feedback
+- Community & Discord
+- Advisory Board
+
+---
+
+# What Surprised Me
