Work on the pres.

--- a/presentation/index.mdx
+++ b/presentation/index.mdx
@@ -288,6 +288,30 @@ Who has been to the Space Center?
 
 ---
 
+<div style={{ display: "flex", fontSize:50 }}>
+  <div style={{flex:1, display:"flex", flexDirection:"column", justifyContent: "center", alignItems:'center'}}>
+  <span style={{fontSize:100}}>👀</span>
+  <span>Vision</span>
+  </div>
+  <div style={{flex:1, display:"flex", flexDirection:"column", justifyContent: "center", alignItems:'center'}}>
+  <span style={{fontSize:100}}>🥅</span>
+  <span>Goals</span>
+  </div>
+  <div style={{flex:1, display:"flex", flexDirection:"column", justifyContent: "center", alignItems:'center'}}>
+  <span style={{fontSize:100}}>📒</span>
+  <span>Plans</span>
+  </div>
+  <div style={{flex:1, display:"flex", flexDirection:"column", justifyContent: "center", alignItems:'center'}}>
+  <span style={{fontSize:100}}>📈</span>
+  <span>Accountability</span>
+  </div>
+
+  </div>
+
+---
+
+<span style={{ fontSize: "120px" }}>👀</span>
+
 # Step 1: Vision
 
 ---
@@ -305,6 +329,8 @@ Who has been to the Space Center?
 <Cite>Me</Cite>
 
 ---
+
+<span style={{ fontSize: "120px" }}>🥅</span>
 
 # Step 2: Goals
 
@@ -331,21 +357,84 @@ Who has been to the Space Center?
 
 - Native Controls
 - Playable over the Internet
+- Beurocracy
 
 ---
+
+<span style={{ fontSize: "120px" }}>☠️</span>
+
+# Flint
+
+Killed by Committee
+
+<Notes>
+  Flint was my last spaceship controls project, and it was good. It was web
+  based, built with Meteor JS. But between the incredible ambitions and the rule
+  by committee, it was never able to come to a completed state. Instead of
+  making it usable, we got buried in the details, so it never saw the light of
+  day. But I did learn some important lessons.
+</Notes>
+
+---
+
+<span style={{ fontSize: "120px" }}>📒</span>
 
 # Step 3: Plan
 
 ---
 
-- Developer experience
 - Working in a familiar domain
-- Tools
-  - React
-  - GraphQL & Apollo
-- Doing a little bit every day. One commit a day
+- Developer experience
+- Maintain Momentum. One commit a day
 
 ---
+
+- <s>Elixer</s>
+- <s>RethinkDB</s>
+- <s>Docker</s>
+- React
+- GraphQL & Apollo
+
+<Notes>
+  Without a good developer experience, coming to work on the project is a real
+  drag. You never want to do anything with it. The tools you choose to use will
+  strongly affect your developer experience.
+</Notes>
+
+---
+
+# I ♥ ⚛️
+
+<Notes>
+  Always bet on React. I've been using it for 3 years, and it's only become more
+  joyful to use. Same with GraphQL. Both are excellent tools.
+
+The main reason I started working on Thorium was so I could learn React and
+GraphQL. Side projects are an awesome way to learn new things because they give
+you the chance to practice what you learn, to make mistakes, and to try new
+things in a safe environment.
+
+</Notes>
+
+---
+
+<Notes>
+  Being a 3-year old project on the cutting edge means I've seen a lot of
+  patterns come and go. Take Apollo's API for example - when I started, there
+  were only HOCs. Then the render prop components were added, and they're
+  awesome. Now there's a Hooks API, which is even nicer. Maybe by the time I
+  give this talk there will be a suspense API 🤞. Fortunately, it's all been
+  backwards compatible, but Thorium almost has paleontological layers showing
+  the trends as they evolve.
+</Notes>
+
+---
+
+# DEMO
+
+---
+
+<span style={{ fontSize: "120px" }}>📈</span>
 
 # Step 4: Accountability
 
