One slide. Yay!

--- a/presentation/index.mdx
+++ b/presentation/index.mdx
@@ -405,6 +405,12 @@ Killed by Committee
 
 # I ♥ ⚛️
 
+> Learning @reactjs before fully understanding JavaScript fundamentals is a
+> great learning path. Learning React can make your JavaScript skills much
+> better than learning JavaScript alone.
+
+<Cite>Me</Cite>
+
 <Notes>
   Always bet on React. I've been using it for 3 years, and it's only become more
   joyful to use. Same with GraphQL. Both are excellent tools.
@@ -413,6 +419,9 @@ The main reason I started working on Thorium was so I could learn React and
 GraphQL. Side projects are an awesome way to learn new things because they give
 you the chance to practice what you learn, to make mistakes, and to try new
 things in a safe environment.
+
+I believe that if you want to learn anything, using a side project with a
+well-defined domain is the best way to do it.
 
 </Notes>
 
