Added some screenshots. Need to incorporate them in case the demo fails.

--- a/presentation/index.mdx
+++ b/presentation/index.mdx
@@ -356,6 +356,7 @@ Who has been to the Space Center?
 # Won't Have
 
 - Native Controls
+- Responsive
 - Playable over the Internet
 - Beurocracy
 
@@ -427,6 +428,10 @@ well-defined domain is the best way to do it.
 
 ---
 
+# API Archeology
+
+## HOC ➡ Render Props ➡ Hooks ➡ Suspense
+
 <Notes>
   Being a 3-year old project on the cutting edge means I've seen a lot of
   patterns come and go. Take Apollo's API for example - when I started, there
@@ -441,6 +446,11 @@ well-defined domain is the best way to do it.
 
 # DEMO
 
+<Notes>
+  Show the Transporters screen to demo Flight Director Interaction Show the
+  thrusters screen to show interactive 3D models
+</Notes>
+
 ---
 
 <span style={{ fontSize: "120px" }}>📈</span>
@@ -450,7 +460,7 @@ well-defined domain is the best way to do it.
 ---
 
 - Open Source
-- Soliciting Feedback
+- Soliciting Feedback - Issue Tracker
 - Community & Discord
 - Advisory Board
 
