--- a/presentation/index.mdx
+++ b/presentation/index.mdx
@@ -258,7 +258,7 @@ Who has been to the Space Center?
 
 ---
 
-# Lessons Learned: Part 1
+# Lessons Learned
 
 - Simple can get the job done
 - Learnable > Powerful
@@ -269,6 +269,15 @@ Who has been to the Space Center?
 
 <Cite>Me</Cite>
 
+---
+
+- Hard to distribute fixes
+- Not easily customized
+- Fragile, not portable
+
+<Notes>
+Since the programs are only local to the computers which run them, and each simulator has custom controls, sharing improvements and bug fixes between the sets of controls is really hard. Changing the controls between simulators is a pain. And the simulator's controls are set up to work in their specific environment, but it's hard to set it up anywhere else. Much better to have one set of controls which can do everything.
+</Notes>
 ---
 
 # Next Generation of Controls
@@ -285,6 +294,10 @@ Who has been to the Space Center?
   Duration Missions are becoming a thing. Wouldn't it be nice if we could save
   the state of flights so we can go back to them at a later date?
 </Notes>
+
+---
+
+# Building Software Projects
 
 ---
 
@@ -323,8 +336,8 @@ Who has been to the Space Center?
 
 ---
 
-> I want controls that can do anything for anyone. Spaceships. Submarines.
-> Escape Rooms. Your only limit is your imagination.
+> I want simulator controls that can do anything for anyone. Spaceships.
+> Submarines. Escape Rooms. Your only limit is your imagination.
 
 <Cite>Me</Cite>
 
@@ -374,6 +387,18 @@ Killed by Committee
   by committee, it was never able to come to a completed state. Instead of
   making it usable, we got buried in the details, so it never saw the light of
   day. But I did learn some important lessons.
+</Notes>
+
+---
+
+<img src={require("../assets/kite.png")} />
+
+## Tethering Constraints
+
+<Notes>
+  Like a kite string, constraints in our projects tether us to what we actually
+  want and allow us to make continuous progress instead of allowing rampant
+  changes, adjustments, suggestions, etc.
 </Notes>
 
 ---
@@ -486,10 +511,9 @@ well-defined domain is the best way to do it.
     <h1>Soliciting Feedback</h1>
     <h2>Issue Tracker</h2>
   </div>
-  <img src={require("../assets/probe.svg")} style={{ height: "50vh" }} />
+  <img src={require("../assets/issue-tracker.png")} style={{ height: "60vh" }} />
 
 </div>
-  Be sure to change this to the issue tracker image
 
 ---
 
@@ -501,6 +525,11 @@ well-defined domain is the best way to do it.
 ---
 
 # Advisory Board
+
+<img
+  src={require("../assets/advisory-board.jpeg")}
+  style={{ height: "60vh" }}
+/>
 
 ---
 
