--- a/presentation/index.mdx
+++ b/presentation/index.mdx
@@ -435,6 +435,13 @@ Killed by Committee
   <li>Maintain Momentum. One commit a day</li>
 </ul>
 
+<Notes>
+  I'm a firm believer that good developer experience will yield good user
+  experience. I think it's possible to go overboard, but thats why it is
+  important to understand your constraints and select tools that can give you
+  both.
+</Notes>
+
 ---
 
 - <s>Elixer</s>
@@ -447,7 +454,7 @@ Killed by Committee
   Without a good developer experience, coming to work on the project is a real
   drag. You never want to do anything with it. The tools you choose to use will
   strongly affect your developer experience. Elixer, Rethink, and Docker would
-  be cool, but
+  be cool, but would they match my constraints?
 </Notes>
 
 ---
@@ -512,6 +519,7 @@ well-defined domain is the best way to do it.
   families, ourselves. Accountability helps us acomplish the things that we want
   to do. It gives us reason and purpose for making what we make, and can help us
   change course when we go the wrong way.
+
 </Notes>
 
 ---
@@ -536,12 +544,23 @@ well-defined domain is the best way to do it.
 
 </div>
 
+<Notes>
+  Releasing Thorium meant answering to customers, and they have a lot of things
+  to change and ideas for improvement. Staying on top of those, finding time to
+  work on them, while prioritizing the most important is really tricky.
+</Notes>
+
 ---
 
 # Community & Discord
 
 <br />
 <img src={require("../assets/discord.png")} style={{ height: "20vh" }} />
+
+<Notes>
+  I saw people helping each other, sharing their successes, coming up with new
+  ideas, and connecting with other communities.
+</Notes>
 
 ---
 
@@ -551,6 +570,11 @@ well-defined domain is the best way to do it.
   src={require("../assets/advisory-board.jpeg")}
   style={{ height: "60vh" }}
 />
+
+<Notes>
+  This advisory board is the only time the Space Center directors all get
+  together to talk shop. We share ideas and foster collaboration.
+</Notes>
 
 ---
 
@@ -567,7 +591,11 @@ well-defined domain is the best way to do it.
 Or what I would do if I did it all over again
 
 <Notes>
-I wrote a list of 10 things that I would do differently if I did it all over again. I'm going to revisit them in 3 years and see how many stand the tests of time.
+I would start with a partner or team. And I would think about making it more friendly to more users.
+
+I wrote a list of 10 things that I would do differently if I did it all over
+again. I'm going to revisit them in 3 years and see how many stand the tests of
+time.
 
     1. Use TypeScript
     2. Use the latest features of all the frameworks - hooks, suspense, etc.
@@ -579,6 +607,31 @@ I wrote a list of 10 things that I would do differently if I did it all over aga
     8. Use a more proper database. My JSON dump works for most peeps, but Ryan Anderson has a MASSIVE snapshot, and his CPU spikes hardcore every time it writes.
     9. Simplify things substantially based on how users actually use Thorium. More sensible defaults, less enterprise-y, less configuration
     10. Write Tests
+
+</Notes>
+
+---
+
+# Wonder-driven Development
+
+## I wonder if...
+
+<Notes>
+  - Subscription-based state management 
+  
+  - Tracking open web browser tabs
+
+- Node-diagram based configuration
+
+- Dynamic station configuration - showing a component based on data from the
+  server
+
+- Mosaic-based dynamic core
+
+- Timeline configuration
+
+
+    - Dynamic viewscreen & auto-viewscreen
 
 </Notes>
 
